--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
     "bcrypt": "^5.0.0",
     "concurrently": "^3.6.1",
     "cookie-parser": "~1.4.4",
@@ -27,7 +30,7 @@
     "express": "^4.21.2",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.26.0",
+    "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^3.14.0",
