--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "html2canvas": "^1.4.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "moment": "^2.30.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
