--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,14 @@
     "@fullcalendar/interaction": "^4.4.0",
     "@fullcalendar/react": "^4.4.0",
     "@material-ui/core": "^4.10.1",
+    "@react-pdf/renderer": "^4.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "html2pdf.js": "^0.10.3",
+    "jspdf": "^2.1.0",
     "jwt-decode": "^4.0.0",
     "material-table": "^1.59.0",
     "moment": "^2.26.0",
