--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-pdf/renderer": "^4.3.0",
     "bcrypt": "^5.0.0",
     "concurrently": "^3.6.1",
     "cookie-parser": "~1.4.4",
@@ -31,6 +32,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "mysql2": "^3.14.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.2"
